# sdr_analysis

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  genindex.html  graphics.pptx  index.html  objects.inv  package.json  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/development/contributing/: internals.doctree  workflow.doctree
.doctrees/modules/: analysis.doctree  data.doctree  utils.doctree
.github/workflows/: changelog-ci.yml  ci.yaml  deploy.yaml  documentation.yaml
_sources/development/contributing/: internals.rst.txt  workflow.rst.txt
_sources/modules/: utils.rst.txt
development/contributing/: internals.html  workflow.html
docs/source/: conf.py  index.rst
docs/source/development/: changelog.rst
docs/source/modules/: analysis.rst  cad.rst  data.rst  physics.rst  simulation.rst  utils.rst
examples/notebooks/: antenna_radiation.ipynb  line_of_sight.ipynb
examples/reference/: antenna.py  test_antenna.py
examples/scripts/: line_of_sight_example.py
modules/: analysis.html  data.html  utils.html
sample_data/: sample_radio_data.csv
src/rats/measurements/: atmospheric_loss.py  base.py
src/rats/simulation/: __init__.py  asset.py
src/rats/utils/: conversions.py  meshlogic.py
src/tada/analysis/: basics.py
src/tada/data/: __init__.py
src/tada/physics/: constants.py
src/tada/utils/: __init__.py  (+6 more)
tests/: test_basics.py
tests/hw_tests/: test_hardware.py
tests/simulation/: conftest.py
tests/utils/: test_conversions.py  test_hardware.py  test_reporting.py
(+20 files in other folders)
